[gd_scene load_steps=5 format=3 uid="uid://p5blrgh1porh"]

[ext_resource type="Texture2D" uid="uid://crqdo0g3qxbsa" path="res://art/tom.png" id="1_cmdwk"]
[ext_resource type="Script" path="res://tom.gd" id="1_d2vb6"]
[ext_resource type="Texture2D" uid="uid://8j1d53xtmxi1" path="res://art/tom2.png" id="3_h1etw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pgawr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_cmdwk")
}, {
"duration": 1.0,
"texture": ExtResource("3_h1etw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Tom" type="Area2D"]
script = ExtResource("1_d2vb6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(302, 274)
sprite_frames = SubResource("SpriteFrames_pgawr")
animation = &"idle"
frame_progress = 0.394545

[node name="TomShiftTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="TomStatsUpdateTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="TomShiftTimer" to="." method="_on_tom_shift_timer_timeout"]
[connection signal="timeout" from="TomStatsUpdateTimer" to="." method="_on_tom_stats_update_timer_timeout"]
